Update HomeVisitorEvent to fetch and utilize username history for sign messages and chest interactions